--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   flame: 0.21.0
+  sensors: 0.4.2+2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -47,7 +48,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/
+     - assets/images/ball.png
+     - assets/images/plank.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
